Criação das telas: - Cadastro de Cliente - Listagem de Clientes - Classe de utilitários para facilitar o código - Cálculo de Prazo - Import da classe KSOAP2 para utilização do webservice dos correios

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="EnderecoJsonCEP">https://viacep.com.br/ws/%s/json/</string>
+    <string name="Sim">Sim</string>
+    <string name="Nao">Não</string>
     <string name="action_settings">Settings</string>
 </resources>
