--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,14 @@
     <string name="EnderecoJsonCEP">https://viacep.com.br/ws/%s/json/</string>
     <string name="Sim">Sim</string>
     <string name="Nao">Não</string>
+
+    <string name="cadastro_cliente">Cadastro de Cliente</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="produto">Produto</string>
+
+    <string name="rastreio">Código de Rastreio</string>
+    <string name="salvar">Salvar</string>
+
+    <string name="salvar_produto_title">Salvar produto</string>
 </resources>
